# tiscord

./: Cargo.toml  LICENSE  README.md  ROADMAP.md
docs/superpowers/plans/: 2026-03-22-tiscord-mvp.md  2026-03-23-tiscord-post-mvp.md
docs/superpowers/specs/: 2026-03-22-tiscord-design.md  2026-03-23-tiscord-post-mvp-design.md
patches/twilight-gateway/: .cargo_vcs_info.json  Cargo.toml
patches/twilight-gateway/src/: config.rs
patches/twilight-http/: .cargo_vcs_info.json  Cargo.toml
patches/twilight-http/src/client/: builder.rs
src/: app.rs  auth.rs  config.rs  main.rs  token_file.rs
src/discord/: actions.rs  client.rs  events.rs  mod.rs
src/store/: guilds.rs  images.rs  messages.rs  mod.rs  notes.rs  notifications.rs  profiles.rs  search.rs  state.rs  typing.rs  voice.rs
src/tui/: component.rs  emoji_data.rs  image_renderer.rs  keybindings.rs  markdown.rs  mod.rs  terminal.rs  terminal_caps.rs  theme.rs
src/tui/components/: channel_header.rs  channel_tree.rs  dm_list.rs  member_sidebar.rs  message.rs  message_input.rs  message_list.rs  message_pane.rs  mod.rs  server_list.rs  sidebar.rs
src/tui/components/overlays/: channel_info.rs  command_palette.rs  emoji_picker.rs  mod.rs  pins.rs  profile.rs  search.rs
src/utils/: time.rs
