[package]
name = "tiscord"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
twilight-gateway = "0.17"
twilight-http = "0.17"
twilight-model = "0.17"
twilight-cache-inmemory = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
keyring = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6"
unicode-width = "0.2"
fuzzy-matcher = "0.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
